# openapi/data.transformed.openapi.yaml
@@ -270,6 +270,8 @@ paths:
       parameters:
         - $ref: '#/components/parameters/ResourceId'
           x-showExample: false
+        - $ref: '#/components/parameters/ReturnIngestionTimestamp'
+          x-showExample: false
       responses:
         '200':
           description: Successful Response
@@ -312,6 +314,8 @@ paths:
         - $ref: '#/components/parameters/From'
           x-showExample: false
         - $ref: '#/components/parameters/Until'
+          x-showExample: false
+        - $ref: '#/components/parameters/MetricsToDelete'
           x-showExample: false
       responses:
         '200':
@@ -362,6 +366,8 @@ paths:
           x-showExample: false
         - $ref: '#/components/parameters/Order'
           x-showExample: false
+        - $ref: '#/components/parameters/ReturnIngestionTimestamp'
+          x-showExample: false
       responses:
         '200':
           description: Successful Response
@@ -389,6 +395,8 @@ paths:
         - $ref: '#/components/parameters/ResourceId'
           x-showExample: false
         - $ref: '#/components/parameters/Metric'
+          x-showExample: false
+        - $ref: '#/components/parameters/ReturnIngestionTimestamp'
           x-showExample: false
       responses:
         '200':
@@ -426,7 +434,9 @@ paths:
           x-showExample: false
         - $ref: '#/components/parameters/Limit'
           x-showExample: false
-        - $ref: '#/components/parameters/SeriesQueryUntil'
+        - $ref: '#/components/parameters/SeriesLastUntil'
+          x-showExample: false
+        - $ref: '#/components/parameters/ReturnIngestionTimestamp'
           x-showExample: false
       responses:
         '200':
@@ -473,6 +483,8 @@ paths:
         - $ref: '#/components/parameters/Limit'
           x-showExample: false
         - $ref: '#/components/parameters/Order'
+          x-showExample: false
+        - $ref: '#/components/parameters/ReturnIngestionTimestamp'
           x-showExample: false
       responses:
         '200':
@@ -558,6 +570,8 @@ paths:
         - $ref: '#/components/parameters/Until'
           x-showExample: false
         - $ref: '#/components/parameters/OnlyTimeseries'
+          x-showExample: false
+        - $ref: '#/components/parameters/MetricsToDelete'
           x-showExample: false
       responses:
         '200':
@@ -943,6 +957,9 @@ components:
       enum:
         - ascending
         - descending
+    ReturnIngestionTimestamp:
+      type: boolean
+      default: false
     SeriesQueryRequest:
       type: object
       properties:
@@ -979,6 +996,8 @@ components:
           $ref: '#/components/schemas/TimeseriesFilter'
         order:
           $ref: '#/components/schemas/Order'
+        returnIngestionTimestamp:
+          $ref: '#/components/schemas/ReturnIngestionTimestamp'
       required:
         - metric
         - aggregates
@@ -1018,6 +1037,8 @@ components:
           $ref: '#/components/schemas/TimeseriesFilter'
         order:
           $ref: '#/components/schemas/Order'
+        returnIngestionTimestamp:
+          $ref: '#/components/schemas/ReturnIngestionTimestamp'
       required:
         - metric
         - resources
@@ -1218,6 +1239,15 @@ components:
       schema:
         type: boolean
         default: false
+    MetricsToDelete:
+      name: Metrics
+      in: query
+      description: If set, only these selected metrics are removed.
+      schema:
+        type: array
+        minItems: 1
+        items:
+          $ref: '#/components/schemas/MetricId'
     SeriesQueryFrom:
       name: from
       in: query
@@ -1240,6 +1270,17 @@ components:
 
         If not specified, a period of 7 days after `from` (or before the request
         was received) will be queried
+      schema:
+        anyOf:
+          - $ref: '#/components/schemas/UnixEpochMillis'
+          - $ref: '#/components/schemas/SO8601Timestamp'
+    SeriesLastUntil:
+      name: until
+      in: query
+      example: 1665705600000
+      description: |-
+        Specifies the timestamp before which last values have to be retrieved.
+        If not specified, defaults to the current timestamp.
       schema:
         anyOf:
           - $ref: '#/components/schemas/UnixEpochMillis'
@@ -1281,6 +1322,12 @@ components:
       description: sort order
       schema:
         $ref: '#/components/schemas/Order'
+    ReturnIngestionTimestamp:
+      name: returnIngestionTimestamp
+      in: query
+      description: return metric ingestion timestamp from time series database.
+      schema:
+        $ref: '#/components/schemas/ReturnIngestionTimestamp'
   securitySchemes:
     waylayApiKeySecret:
       type: http
